add go cron job
