# routes/coin.go
@@ -30,6 +30,13 @@ type TrendingCoinsDto struct {
 	Coins []CoinItemDto `json:"coins"`
 }
 
+type CoinListItemDto struct {
+	Id        string            `json:"id"`
+	Symbol    string            `json:"symbol"`
+	Name      string            `json:"name"`
+	Platforms map[string]string `json:"platforms"`
+}
+
 // GetTrendingCoins godoc
 // @Summary      List of trending coins
 // @Description  get list of trending coin
@@ -61,4 +68,57 @@ func GetTrendingCoins(c *fiber.Ctx) error {
 	}
 	fmt.Println(responseData)
 	return c.Status(statusCode).JSON(responseData)
+}
+
+// GetCoinsList godoc
+// @Summary      List of all available coins
+// @Description  get list of all available coin
+// @Tags         coins
+// @Accept       json
+// @Produce      json
+// @Success      200   {array}   CoinListItemDto
+// @Failure      400
+// @Failure      404
+// @Failure      500
+// @Router       /api/coin/all [get]
+func GetCoinsList(c *fiber.Ctx) error {
+	// declare agent
+	agent := fiber.Get("https://api.coingecko.com/api/v3/coins/list?include_platform=true")
+	// get response and status
+	statusCode, body, errs := agent.Bytes()
+	// if error, return error
+	if len(errs) > 0 {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"errs": errs,
+		})
+	}
+	var responseData []CoinListItemDto
+	err := json.Unmarshal(body, &responseData)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"errs": err,
+		})
+	}
+	fmt.Println(responseData)
+	fmt.Println("First item: ", responseData[0])
+	return c.Status(statusCode).JSON(responseData)
+}
+
+func GetCoinGekoCoinsList() ([]CoinListItemDto, error) {
+	// declare agent
+	agent := fiber.Get("https://api.coingecko.com/api/v3/coins/list?include_platform=true")
+	// get response and status
+	_, body, errs := agent.Bytes()
+	// if error, return error
+	if len(errs) > 0 {
+		return nil, errs[0]
+	}
+	var responseData []CoinListItemDto
+	err := json.Unmarshal(body, &responseData)
+	if err != nil {
+		return nil, err
+	}
+	fmt.Println(responseData)
+	fmt.Println("First item: ", responseData[0])
+	return responseData, nil
 }
